add watched page
Former-commit-id: 84f1391d043cb52712c1242fe467e30a37ef6c71 [formerly f75b71b4bff243b073d15ac56da39dd51b5b5e8e]
Former-commit-id: 18da4e33b8b51fd31afbdad4903a7d345e62a0ea

--- a/ExClient/ExClient.csproj
+++ b/ExClient/ExClient.csproj
@@ -123,7 +123,8 @@
     <Compile Include="Internal\GalleryListParser.cs" />
     <Compile Include="Internal\ThumbClient.cs" />
     <Compile Include="Launch\PopularHandler.cs" />
-    <Compile Include="Search\WatchingSearchResult.cs" />
+    <Compile Include="Launch\WatchedHandler.cs" />
+    <Compile Include="Search\WatchedSearchResult.cs" />
     <Compile Include="Services\ExpungeInfo.cs" />
     <Compile Include="Services\ExpungeReason.cs" />
     <Compile Include="Services\ExpungeRecord.cs" />
