ci: test new cert

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
         #   $certfile = Get-Item "./ExViewer/ExViewer_TemporaryKey.pfx"
         #   Import-PfxCertificate $certfile -Password (ConvertTo-SecureString -AsPlainText "${{ secrets.CERT_PASS }}" -Force) -CertStoreLocation Cert:\CurrentUser\My\
         run: |
-          New-SelfSignedCertificate -Subject "CN=Opportunity" -CertStoreLocation Cert:\CurrentUser\My\
+          New-SelfSignedCertificate -Type CodeSigningCert -Subject "CN=Opportunity" -CertStoreLocation Cert:\CurrentUser\My\
 
       - name: Restore nuget cache
         uses: actions/cache@v3
