--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,13 +18,6 @@ jobs:
       - name: Setup MSBuild.exe
         uses: microsoft/setup-msbuild@v1.0.2
 
-      - name: Prepare certificate
-        # run: |
-        #   $certfile = Get-Item "./ExViewer/ExViewer_TemporaryKey.pfx"
-        #   Import-PfxCertificate $certfile -Password (ConvertTo-SecureString -AsPlainText "${{ secrets.CERT_PASS }}" -Force) -CertStoreLocation Cert:\CurrentUser\My\
-        run: |
-          New-SelfSignedCertificate -Type CodeSigningCert -Subject "CN=Opportunity" -CertStoreLocation Cert:\CurrentUser\My\
-
       - name: Restore nuget cache
         uses: actions/cache@v3
         with:
@@ -36,6 +29,14 @@ jobs:
       - name: Restore the application
         run: |
           nuget restore
+
+      - name: Prepare certificate
+        # run: |
+        #   $certfile = Get-Item "./ExViewer/ExViewer_TemporaryKey.pfx"
+        #   Import-PfxCertificate $certfile -Password (ConvertTo-SecureString -AsPlainText "${{ secrets.CERT_PASS }}" -Force) -CertStoreLocation Cert:\CurrentUser\My\
+        run: |
+          $cert = New-SelfSignedCertificate -Type CodeSigningCert -Subject "CN=Opportunity" -CertStoreLocation Cert:\CurrentUser\My\
+          ((Get-Content -Raw "./ExViewer/ExViewer.csproj") -replace 'AC82A857467374ACB64C3F8A542446485164DD50',$cert.Thumbprint) | Set-Content "./ExViewer/ExViewer.csproj"
 
       - name: Generate string files
         run: |
