--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,12 +31,19 @@ jobs:
           nuget restore
 
       - name: Prepare certificate
-        # run: |
-        #   $certfile = Get-Item "./ExViewer/ExViewer_TemporaryKey.pfx"
-        #   Import-PfxCertificate $certfile -Password (ConvertTo-SecureString -AsPlainText "${{ secrets.CERT_PASS }}" -Force) -CertStoreLocation Cert:\CurrentUser\My\
         run: |
-          $cert = New-SelfSignedCertificate -Type CodeSigningCert -Subject "CN=Opportunity" -CertStoreLocation Cert:\CurrentUser\My\
-          ((Get-Content -Raw "./ExViewer/ExViewer.csproj") -replace 'AC82A857467374ACB64C3F8A542446485164DD50',$cert.Thumbprint) | Set-Content "./ExViewer/ExViewer.csproj"
+          $certKey = "${{ secrets.CERT_PASS }}"
+          if ($certKey) {
+            $certFile = Get-Item "./ExViewer/ExViewer_TemporaryKey.pfx"
+            $certPass = ConvertTo-SecureString -AsPlainText $certKey -Force
+            Write-Output "Using exist certificate"
+            Import-PfxCertificate $certFile -Password $certPass -CertStoreLocation Cert:\CurrentUser\My\
+          } else {
+            $cert = New-SelfSignedCertificate -Type CodeSigningCert -Subject "CN=Opportunity" -CertStoreLocation Cert:\CurrentUser\My\
+            ((Get-Content -Raw "./ExViewer/ExViewer.csproj") -replace 'AC82A857467374ACB64C3F8A542446485164DD50',$cert.Thumbprint) | Set-Content "./ExViewer/ExViewer.csproj"
+            Write-Output "Using new certificate"
+            Write-Output $cert
+          }
 
       - name: Generate string files
         run: |
