--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,7 @@
-name: Build
+name: CI
 
 on:
   push:
-    branches: ["*"]
   pull_request:
 
 jobs:
@@ -63,5 +62,35 @@ jobs:
       - name: Upload build artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: MSIX Package
+          name: Packages
           path: ExViewer/AppPackages
+
+  deploy:
+    needs: build
+    if: startsWith(github.event.ref, 'refs/tags/')
+    runs-on: windows-latest
+
+    env:
+      MOBILE_CENTER_CURRENT_APP: Opportunity/E-Viewer
+      APPCENTER_ACCESS_TOKEN: ${{ secrets.APPCENTER_ACCESS_TOKEN }}
+
+    steps:
+      - name: Download build artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: Packages
+          path: ./
+      - name: Upload symbols
+        run: |
+          yarn global add appcenter-cli
+          Get-ChildItem **/*.appxsym | ForEach-Object {
+            appcenter crashes upload-symbols --appxsym "$_"
+          }
+      - name: Publish to github release
+        uses: ncipollo/release-action@v1.11.2
+        with:
+          draft: true
+          omitDraftDuringUpdate: true
+          allowUpdates: true
+          artifacts: "*/*.msix,*/*.cer,*/*.appxsym"
+          replacesArtifacts: true
