ci: disable-telemetr

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,10 +70,6 @@ jobs:
     if: startsWith(github.event.ref, 'refs/tags/')
     runs-on: windows-latest
 
-    env:
-      MOBILE_CENTER_CURRENT_APP: Opportunity/E-Viewer
-      APPCENTER_ACCESS_TOKEN: ${{ secrets.APPCENTER_ACCESS_TOKEN }}
-
     steps:
       - name: Download build artifacts
         uses: actions/download-artifact@v3
@@ -81,10 +77,13 @@ jobs:
           name: Packages
           path: ./
       - name: Upload symbols
+        env:
+          MOBILE_CENTER_CURRENT_APP: Opportunity/E-Viewer
+          APPCENTER_ACCESS_TOKEN: ${{ secrets.APPCENTER_ACCESS_TOKEN }}
         run: |
           yarn global add appcenter-cli
           Get-ChildItem **/*.appxsym | ForEach-Object {
-            appcenter crashes upload-symbols --appxsym "$_"
+            appcenter crashes upload-symbols --disable-telemetry --appxsym "$_"
           }
       - name: Publish to github release
         uses: ncipollo/release-action@v1.11.2
